@@ -8,6 +8,7 @@ OpenDNSSEC trunk
 * Optimise communication of signconfs for multiple zones sharing keys. 
   Group zones in zonelist.xml by policy to get this benefit.
 * Bugreport #101: Signer Engine now maintains its own pidfile.
+* Jitter redefined: now in the range of [-jitter, ..., jitter]
 
 Bugfixes:
 * Enforcer: Make sure that we read the correct config file when dropping privs
